fixed aycabron clicker to fit on mobile

--- a/webersite/css/awesomesauce.css
+++ b/webersite/css/awesomesauce.css
@@ -1,5 +1,5 @@
 * {
-    background-color: rgb(50, 0, 50);
+    background-color: #320032;
     color: black ;
     font-family: Comic Sans MS;
 }
